--- a/website/LETTER.html
+++ b/website/LETTER.html
@@ -120,7 +120,7 @@
 			<figure class="shadow"><img src="sid (5).jpg"></figure>
 			<figure class="shadow"><img src="sid (8).jpg"></figure>
 			<figure class="shadow"><img src="sid.jpg"></figure>
-			<figure class="shadow"><img src="b.jpg"></figure>
+			<figure class="shadow"></figure>
 			<figure class="shadow"><img src="sid (4).jpg"></figure>
 		</div>
 
