--- a/website/LETTER.html
+++ b/website/LETTER.html
@@ -121,6 +121,7 @@
 			<figure class="shadow"><img src="sid (8).jpg"></figure>
 			<figure class="shadow"><img src="sid.jpg"></figure>
 			<figure class="shadow"><img src="sid (4).jpg"></figure>
+			<figure class="shadow"></figure>
 		</div>
 
 	</div>
