--- a/website/index.html
+++ b/website/index.html
@@ -22,7 +22,7 @@
           <img src="one.jpg" alt="">
         </div>
         <div class="slide">
-          <img src="four.jpg" alt="">
+          <img src="four4.jpg" alt="">
         </div>
         <div class="slide">
           <img src="three.jpg" alt="">
